<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PageBase"
    android:orientation="vertical" >
    
    <Space
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@drawable/logo" />
    
    <Space
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="@style/StyledButton"
        android:onClick="menuItemClicked"
        android:tag="start-game"
        android:text="@string/main_menu_start_game" />
    
    <Button
        style="@style/StyledButton"
        android:onClick="menuItemClicked"
        android:tag="join-game"
        android:text="@string/main_menu_join_game" />

    <Button
        style="@style/StyledButton"
        android:onClick="menuItemClicked"
        android:tag="stats"
        android:text="@string/main_menu_stats" />

    <Button
        style="@style/StyledButton"
        android:onClick="menuItemClicked"
        android:tag="options"
        android:text="@string/main_menu_options" />

    <Space
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>