<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PageBase"
    android:orientation="vertical" >

    <TextView
        style="@style/PageTitle"
        android:text="@string/stats_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin" >

        <TextView
            style="@style/SubTitle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/stats_games_played" />

        <TextView
            android:id="@+id/gamesPlayed"
            style="@style/SmallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/stats_games_default" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin" >

        <TextView
            style="@style/SubTitle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/stats_games_won" />

        <TextView
            android:id="@+id/gamesWon"
            style="@style/SmallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/stats_games_default" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin" >

        <TextView
            style="@style/SubTitle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/stats_games_lost" />

        <TextView
            android:id="@+id/gamesLost"
            style="@style/SmallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/stats_games_default" />

    </LinearLayout>

</LinearLayout>