<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PageBase"
    android:layout_width="400dp"
    android:layout_height="600dp"
    android:orientation="vertical"
    tools:context=".PlayerSelectActivity" >

    <TextView
        style="@style/PageTitle"
        android:layout_width="match_parent"
        android:text="@string/setup_game_player" />

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="userControlledClicked"
            android:orientation="vertical"
            android:paddingBottom="@dimen/half_vertical_margin"
            android:paddingLeft="@dimen/half_horizontal_margin"
            android:paddingRight="@dimen/half_horizontal_margin"
            android:paddingTop="@dimen/half_vertical_margin" >

            <ImageView
                android:id="@+id/localIcon"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@color/playerTwoColour"
                android:contentDescription="@string/setup_game_player_type_local"
                android:scaleType="centerCrop"
                android:src="@drawable/user_display_picture" />

            <TextView
                style="@style/SmallText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/half_vertical_margin"
                android:text="@string/setup_game_player_type_local" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="computerControlledClicked"
            android:orientation="vertical"
            android:paddingBottom="@dimen/half_vertical_margin"
            android:paddingLeft="@dimen/half_horizontal_margin"
            android:paddingRight="@dimen/half_horizontal_margin"
            android:paddingTop="@dimen/half_vertical_margin" >

            <ImageView
                android:id="@+id/virtualIcon"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@color/playerTwoColour"
                android:contentDescription="@string/setup_game_player_type_virtual"
                android:scaleType="centerCrop"
                android:src="@drawable/android_display_picture" />

            <TextView
                style="@style/SmallText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/half_vertical_margin"
                android:text="@string/setup_game_player_type_virtual" />
        </LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/remotePlayersArea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="vertical" >

        <TextView
            style="@style/SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/half_vertical_margin"
            android:text="@string/setup_game_player_type_remote" />

        <LinearLayout
            android:id="@+id/bluetoothDisabledArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/bluetooth_is_disabled"
                android:src="@drawable/error" />

            <TextView
                style="@style/SmallText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/bluetooth_is_disabled" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" >

                <Button
                    android:id="@+id/enableBluetoothButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/half_vertical_margin"
                    android:drawableLeft="@drawable/bluetooth"
                    android:onClick="enableBluetoothClicked"
                    android:text="@string/bluetooth_enable" />

                <ProgressBar
                    android:id="@+id/bluetoothTurningOnSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/remotePlayersLoadingSpinner"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

        <ListView
            android:id="@+id/remoteDevicesList"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:visibility="gone" >

        </ListView>

    </LinearLayout>

    <Button
        style="@style/NegativeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/zero"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="removeClicked"
        android:text="@string/setup_game_select_player_remove" />

</LinearLayout>